<resources>
    <string name="google_maps_server_key">AIzaSyAuAxXeyRFoWU69LYWhusUSo7dEoWtdwIQ</string>
    <string name="app_name">FiFood</string>
    <string name="txtOr">hoặc</string>
    <string name="new_sign_in">Đăng ký mới</string>
    <string name="join_now">Tham gia ngay</string>
    <string name="login_atvs">Đăng nhập bằng ATVS</string>
    <string name="login_fb"> Đăng nhập bằng Facebook</string>
    <string name="facebook_app_id">445168885683294</string>
    <string name="fb_login_protocol_scheme">fbAPP_ID</string>
    <string name="store_name">Tên cửa hàng</string>
    <string name="store_address">Địa chỉ</string>
    <string name="store_desc">Nội dung</string>
    <string name="search">Tìm kiếm</string>
    <string name="post_total">Tổng số bài đăng</string>
    <string name="good">Tốt</string>
    <string name="bad">Xấu</string>
    <string name="isChecked">Không vi phạm</string>
    <string name="isNotChecked">Vi phạm</string>
    <string name="foodSafely">Đánh giá của cơ quan chức năng</string>
    <string name="post">Gửi</string>
    <string name="hint_comment">Viết bình luận</string>
    <string name="add_store">Thêm cửa hàng</string>
    <string name="log_out">Đăng xuất</string>
</resources>
