<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundGray"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_name"
        android:textColor="#000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#fff"
        android:padding="@dimen/padding_small" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/store_address"
        android:textColor="#000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:padding="@dimen/padding_small" />


    <Button
        android:id="@+id/btnSearch"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@color/colorBgMenuClicked"
        android:text="@string/search"
        android:textColor="#fff" />

    <ListView
        android:id="@id/lvFood"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>
</LinearLayout>