<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:padding="@dimen/activity_vertical_margin"
    android:theme="@android:style/Theme.NoTitleBar">


    <RelativeLayout
        android:id="@+id/layoutLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp">

        <Button
            android:id="@+id/btnLoginATVS"
            android:layout_width="@dimen/button_login_wight"
            android:layout_height="@dimen/button_login_height"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_login_atvs_click"
            android:gravity="center"
            android:text="@string/login_atvs"
            android:textColor="#fff" />

        <View
            android:id="@+id/line"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_below="@+id/btnLoginATVS"
            android:layout_marginTop="@dimen/primary_login_margin"
            android:background="#fff">


        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLoginATVS"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/line"
            android:text="@string/txtOr"
            android:textColor="#fff"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLoginFb"
            android:layout_width="@dimen/button_login_wight"
            android:layout_height="@dimen/button_login_height"
            android:layout_below="@+id/line"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/primary_login_margin"
            android:background="@drawable/btn_login_fb_click"
            android:gravity="center"
            android:text="@string/login_fb"
            android:textColor="#fff" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="320dp"
        android:layout_height="140dp"
        android:layout_above="@+id/layoutLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@mipmap/logo" />

    <TextView
        android:id="@+id/tvNewSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="10"
        android:text="@string/new_sign_in"
        android:textColor="#fff"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imgPlay"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@mipmap/ic_play" />

    <TextView
        android:id="@+id/tvJoinNow"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/imgPlay"
        android:gravity="center_vertical"
        android:text="@string/join_now"
        android:textColor="@color/colorButtonLoginATVS"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

</RelativeLayout>