<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MyTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/detailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="10"

                >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgMain"
                        android:layout_width="@dimen/item_list_menu_food_height"
                        android:layout_height="@dimen/item_list_menu_food_height"
                        android:padding="8dp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/bg" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="gone" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btnShowMap"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"

                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="This is a food"
                        android:textColor="#000"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvName"
                        android:layout_marginTop="@dimen/padding_small"
                        android:text="This is a food"
                        android:textColor="@color/colorAddress"
                        android:textSize="@dimen/text_address_size" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="90dp"
                    android:layout_height="wrap_content">

                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/text_size"
                        android:layout_centerHorizontal="true"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:progressDrawable="@drawable/ratingbar_yellow"
                        android:stepSize="0.1" />

                    <TextView
                        android:id="@+id/tvDistance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ratingBar"
                        android:gravity="center"
                        android:text="Cách 2km"
                        android:textColor="@color/colorAddress"
                        android:textSize="@dimen/text_address_size" />
                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/pagerView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_below="@+id/detailLayout"
                android:layout_marginTop="@dimen/primary_login_margin">

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true" />


                <TextView
                    android:id="@+id/tvShopID"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_margin="5dp"
                    android:background="@drawable/border_textview_post_numb_detail"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="10dp">

                <RelativeLayout

                    android:layout_width="60dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvGoodCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="1"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvGoodCount"
                        android:drawableLeft="@mipmap/ic_good_ac"
                        android:gravity="center"
                        android:text="@string/good"
                        android:textSize="@dimen/text_size" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:id="@+id/tvBadCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="1"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvBadCount"
                        android:drawableLeft="@mipmap/ic_nogood_ac"
                        android:gravity="center"
                        android:text="@string/bad"
                        android:textSize="@dimen/text_size" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvIsCheck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/isChecked" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvIsCheck"
                        android:gravity="center"
                        android:text="@string/foodSafely"
                        android:textSize="@dimen/text_address_size"
                        android:textStyle="bold" />

                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/colorBackgroundGray"></View>

            <Constant.ExpandableHeightListView
                android:id="@+id/lvComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="120dp"
                android:fadingEdge="none"
                android:focusable="false"
                android:scrollbars="none"></Constant.ExpandableHeightListView>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorBackgroundComment">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="@color/colorBackgroundGray"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:padding="10dp"
            android:weightSum="10">

            <EditText
                android:id="@+id/etComment"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background="@drawable/border_edittext_write_comment"
                android:hint="@string/hint_comment"
                android:paddingBottom="7dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="7dp"
                android:textColorHint="@color/colorAddress"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnPost"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:layout_weight="2"
                android:background="@drawable/bg_blue_selector"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/post"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="10dp"
            android:weightSum="10">

            <ImageButton
                android:id="@+id/btnCamera"
                android:layout_width="@dimen/detail_bad_good_size"
                android:layout_height="@dimen/detail_bad_good_size"
                android:background="@drawable/btn_camera_clicked" />

            <RadioGroup
                android:id="@+id/rgBadGood"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/line"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"

                >

                <RadioButton
                    android:id="@+id/rbGood"
                    android:layout_width="@dimen/detail_bad_good_size"
                    android:layout_height="@dimen/detail_bad_good_size"
                    android:background="@drawable/btn_good_click"
                    android:button="@null" />

                <TextView
                    android:id="@+id/tvGood"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Tốt"
                    android:textSize="@dimen/text_size" />

                <RadioButton
                    android:id="@+id/rbBad"
                    android:layout_width="@dimen/detail_bad_good_size"
                    android:layout_height="@dimen/detail_bad_good_size"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/btn_bad_click"
                    android:button="@null" />

                <TextView
                    android:id="@+id/tvBad"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Xấu"
                    android:textSize="@dimen/text_size" />


            </RadioGroup>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp">

                <CheckBox
                    android:id="@+id/cbReport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/cbReport"
                    android:layout_toRightOf="@+id/rgBadGood"
                    android:gravity="center"
                    android:lines="2"
                    android:text="Báo cáo vi phạm VSATTP"
                    android:textSize="@dimen/text_size" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <ProgressBar
            android:id="@+id/pbHeaderProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"></ProgressBar>
    </RelativeLayout>
</RelativeLayout>